
=== Beats version HEAD
https://github.com/elastic/beats/compare/v6.5.1...6.5[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Auditbeat*

*Filebeat*

*Heartbeat*

*Journalbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

*Functionbeat*

==== Bugfixes

*Affecting all Beats*

- Propagate Sync error when running SafeFileRotate. {pull}9069[9069]

*Auditbeat*

*Filebeat*

- Fix installation of haproxy dashboard. {issue}9307[9307] {pull}9313[9313]

*Heartbeat*

*Journalbeat*

*Metricbeat*

- Fix panic on docker healthcheck collection on dockers without healthchecks. {pull}9171[9171]
- Fix issue preventing diskio metrics collection for idle disks. {issue}9124[9124] {pull}9125[9125]

*Packetbeat*

*Winlogbeat*

*Functionbeat*

==== Added

*Affecting all Beats*

*Auditbeat*

*Filebeat*

*Heartbeat*

*Journalbeat*

*Metricbeat*

*Packetbeat*

*Winlogbeat*

*Heartbeat*

*Functionbeat*

==== Deprecated

*Affecting all Beats*

*Filebeat*

*Heartbeat*

*Journalbeat*

*Packetbeat*

*Winlogbeat*

*Functionbeat*

==== Known Issue


////////////////////////////////////////////////////////////

[[release-notes-6.5.1]]
=== Beats version 6.5.1
https://github.com/elastic/beats/compare/v6.5.0...v6.5.1[View commits]

==== Bugfixes

*Affecting all Beats*
- Fix windows binaries not having an enroll command. {issue}9096[9096] {pull}8836[8836]

*Journalbeat*
- Fix journalbeat sometimes hanging if output is unavailable. {pull}9106[9106]

*Metricbeat*
- Fix race condition when enriching events with kubernetes metadata. {issue}9055[9055] {issue}9067[9067]

==== Added

*Journalbeat*
- Add minimal kibana dashboard. {pull}9106[9106]

[[release-notes-6.5.0]]
=== Beats version 6.5.0
https://github.com/elastic/beats/compare/v6.4.0...v6.5.0[View commits]

==== Bugfixes

*Affecting all Beats*

- Fixed `add_host_metadata` not initializing correctly on Windows. {issue}7715[7715]
- Fixed missing file unlock in spool file on Windows, so file can be reopened and locked. {pull}7859[7859]